feat: Support diagonal pathfinding movement